--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
+    "swiper": "^9.0.5",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
